--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,8 +4,8 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
-    "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "strictNullChecks": false
   },
   "include": ["src"]
 }
